enum-ptr-tests/tests/fail/no_enough_alignment.stderr
error[E0080]: evaluation of `<CompactFoo as std::convert::From<Foo>>::from::{constant#0}` failed
 --> tests/fail/no_enough_alignment.rs:5:10
  |
5 | #[derive(EnumPtr)]
  |          ^^^^^^^
  |          |
  |          the evaluated program panicked at '`Foo::B` has no enough alignment', $DIR/tests/fail/no_enough_alignment.rs:5:10
  |          inside `CompactFoo::_check` at /home/qc/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/panic.rs:57:9
  |          inside `<CompactFoo as From<Foo>>::from::{constant#0}` at $DIR/tests/fail/no_enough_alignment.rs:5:10
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)
